fixed mobile overflow

--- a/index.css
+++ b/index.css
@@ -7,5 +7,7 @@
     position: absolute;
     left: 0;
     top: 0;
+    max-width: 90vw;
+    word-wrap: break-word;
     z-index: 999;
 }
